--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!--[if IE]><![endif]--><!DOCTYPE html>
 <!--[if lt IE 8]>       <html lang="en" class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>          <html lang="en" class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!-->  <html lang="en" class="no-js"> <!--<![endif]-->
+<!--[if gt IE 8]><!-->  <html lang="en" class="dev no-js"> <!--<![endif]-->
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -31,7 +31,7 @@
                 <article class="slides xC"></article>
             </section>
 
-            <div title="Article choices" class="iS-proxy">
+            <div title="choices" class="iS-proxy">
                 <span class="iS-peg"></span>
             </div>
         </div>
