--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
         <div class="iS-port _spending reveal">
 
             <section class="iS-view">
-                <article class="slides xA"></article>
-                <article class="slides xB"></article>
-                <article class="slides xC"></article>
+                <article class="slides xA">a</article>
+                <article class="slides xB">b</article>
+                <article class="slides xC">c</article>
             </section>
 
             <div title="choices" class="iS-proxy">
