call it a _projector

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
     </head>
     <body class="loading"><noscript> error: scripting is disabled </noscript>
 
-        <button class="_spending round control">tog</button>
+        <button class="_projector round control">tog</button>
 
-        <div class="iS-port _spending reveal">
+        <div class="iS-port _projector reveal">
 
             <section class="iS-view">
                 <article class="slides xA">a</article>
