--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
     </head>
     <body class="loading"><noscript> error: scripting is disabled </noscript>
 
-        <button class="_projector round control">tog</button>
+        <button class="_projector control">tog</button>
 
-        <div class="iS-port _projector reveal">
+        <div class="iS-port _projector">
 
             <section class="iS-view">
-                <article class="slides xA">a</article>
-                <article class="slides xB">b</article>
-                <article class="slides xC">c</article>
+                <article>a</article>
+                <article>b</article>
+                <article>c</article>
             </section>
 
             <div title="choices" class="iS-proxy">
