--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                 <article>a</article>
                 <article>b</article>
                 <article>c</article>
+                <article>d</article>
             </section>
 
             <div title="choices" class="iS-proxy">
