roughly enable again

--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
 
         <button class="_projector control">tog</button>
 
-        <div class="iS-port _projector">
+        <div class="iS-port">
 
-            <section class="iS-view">
-                <article>a</article>
-                <article>b</article>
-                <article>c</article>
-                <article>d</article>
-            </section>
+            <div class="iS-view">
+                <img class="c1" src="./images/metal.png">
+                <img class="c2" src="./images/metal.png">
+                <img class="c3" src="./images/metal.png">
+                <img class="c4" src="./images/metal.png">
+            </div>
 
-            <div title="choices" class="iS-proxy">
-                <span class="iS-peg"></span>
+            <div title="slideshow" class="iS-proxy">
+                <span title="start/stop" class="control iS-peg"></span>
             </div>
         </div>
 
