--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!--[if IE]><![endif]--><!DOCTYPE html>
 <!--[if lt IE 8]>       <html lang="en" class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>          <html lang="en" class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!-->  <html lang="en" class="dev no-js"> <!--<![endif]-->
+<!--[if gt IE 8]><!-->  <html lang="en" class="no-js"> <!--<![endif]-->
     <head>
         <meta charset="utf-8">
         <title>_model_</title>
@@ -25,18 +25,17 @@
     </head>
     <body class="loading"><noscript> error: scripting is disabled </noscript>
 
-        <button class="_spending round control">tog</button>
+        <div class="iS-port">
 
-        <div class="iS-port _spending reveal">
+            <div class="iS-view">
+                <img class="c1" src="./images/metal.png">
+                <img class="c2" src="./images/metal.png">
+                <img class="c3" src="./images/metal.png">
+                <img class="c4" src="./images/metal.png">
+            </div>
 
-            <section class="iS-view">
-                <article class="slides xA"></article>
-                <article class="slides xB"></article>
-                <article class="slides xC"></article>
-            </section>
-
-            <div title="choices" class="iS-proxy">
-                <span class="iS-peg"></span>
+            <div title="slideshow" class="iS-proxy">
+                <span title="start/stop" class="control iS-peg"></span>
             </div>
         </div>
 
