--- a/index.html
+++ b/index.html
@@ -1,43 +1,3 @@
-<!--[if IE]><![endif]--><!DOCTYPE html>
-<!--[if lt IE 8]>       <html lang="en" class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>          <html lang="en" class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!-->  <html lang="en" class="no-js"> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8">
-        <title>_model_</title>
-        <meta content="noindex, nofollow" name="robots">
-        <meta content="ie=edge" http-equiv="x-ua-compatible">
-        <meta http-equiv="cache-control" content="max-age=0, must-revalidate">
-        <!--[if lt IE 10]><script>isIE=!0</script><![endif]-->
-        <meta content="Originally built by WF-ECG INTERACTIVE (Wells Fargo Enterprise Creative Group).
-              We design and develop with a focus on web standards and best practices." name="description">
-        <meta name="viewport" content="width=device-width">
-        <!--  -->
-        <script>l=location,s=l.pathname,t=s.toLowerCase();
-            t=t.match(/\w+\.\w+$/)?t:t.replace(/\/*$/,'/index.html');
-            t!==s&&(l.pathname=t);</script>
-        <!--  -->
-        <script src="./root.js"></script>
-        <link href="./styles/screen.css" media="all" rel="stylesheet" type="text/css">
-        <link href="./styles/print.css" media="print" rel="stylesheet" type="text/css">
-        <script defer src="./load.js"></script>
-        <!--  -->
-    </head>
-    <body class="loading"><noscript> error: scripting is disabled </noscript>
-
-        <div class="iS-port">
-
-            <div class="iS-view">
-                <img class="c1" src="./images/metal.png">
-                <img class="c2" src="./images/metal.png">
-                <img class="c3" src="./images/metal.png">
-                <img class="c4" src="./images/metal.png">
-            </div>
-
-            <div title="slideshow" class="iS-proxy">
-                <span title="start/stop" class="control iS-peg"></span>
-            </div>
-        </div>
-
-    </body>
-</html>
+<meta charset="utf-8">
+<script>location.href.match(/\.com.*(\/[^\.\/]+)+$/)&&(location.href+='/')</script>
+<meta http-equiv="Refresh" content="0; URL=./app/" />
