--- a/app/starfield.html
+++ b/app/starfield.html
@@ -25,29 +25,29 @@
         <div class="wrapper">
 
             <div class="stars field0" id="tmp0">
-                <div id="scroller"></div>
+                <div>SCROLLER</div>
             </div>
 
             <div class="stars field1" id="tmp1">
-                <div id="stars1"></div>
+                <div>STARS 1</div>
             </div>
 
             <div class="stars field2" id="tmp2">
-                <div id="stars2"></div>
+                <div>STARS 2</div>
             </div>
         </div>
 
         <script>
             _.delay(function () {
-                var myScroll = new IScroll('#tmp0', {
+                var myScroll = new IScroll('.field0', {
                     mouseWheel: true,
                     indicators: [{
-                            el: document.getElementById('tmp1'),
+                            el: $('.field1')[0],
                             resize: false,
                             ignoreBoundaries: true,
                             speedRatioY: 0.4
                         }, {
-                            el: document.getElementById('tmp2'),
+                            el: $('.field2')[0],
                             resize: false,
                             ignoreBoundaries: true,
                             speedRatioY: 0.2
