set a touch div

--- a/app/starfield.html
+++ b/app/starfield.html
@@ -25,7 +25,7 @@
         <div class="wrapper">
 
             <div class="stars field0" id="tmp0">
-                <div>SCROLLER</div>
+                <div class="touch">SCROLLER</div>
             </div>
 
             <div class="stars field1" id="tmp1">
