even all things

--- a/app/starfield.html
+++ b/app/starfield.html
@@ -45,12 +45,12 @@
                             el: $('.field1')[0],
                             resize: false,
                             ignoreBoundaries: true,
-                            speedRatioY: 0.4
+                            speedRatioY: 0.666666,
                         }, {
                             el: $('.field2')[0],
                             resize: false,
                             ignoreBoundaries: true,
-                            speedRatioY: 0.2
+                            speedRatioY: 0.333333,
                         }]
                 });
 
