--- a/app/starfield.html
+++ b/app/starfield.html
@@ -40,17 +40,17 @@
         <script>
             _.delay(function () {
                 var myScroll = new IScroll('.field0', {
+                    freeScroll: true,
                     mouseWheel: true,
+                    scrollX: true,
                     indicators: [{
                             el: $('.field1')[0],
-                            resize: false,
                             ignoreBoundaries: true,
-                            speedRatioY: 2/3,
+                            resize: false,
                         }, {
                             el: $('.field2')[0],
-                            resize: false,
                             ignoreBoundaries: true,
-                            speedRatioY: 1/3,
+                            resize: false,
                         }]
                 });
 
