bring up to state of aturitmo

--- a/app/index.html
+++ b/app/index.html
@@ -91,5 +91,7 @@
                 $('body').scrollspy({ target: '.navbar-example' });
             }, 999);
         </script>
+
+        <!-- livereload --><script src="http://localhost:7999/livereload.js?snipver=1"></script>
     </body>
 </html>
