--- a/app/starfield.html
+++ b/app/starfield.html
@@ -79,5 +79,7 @@
                 C.debug(myScroll);
             }, 666);
         </script>
+
+        <!-- livereload --><script src="http://localhost:7999/livereload.js?snipver=1"></script>
     </body>
 </html>
