--- a/app/index.html
+++ b/app/index.html
@@ -92,6 +92,6 @@
             }, 999);
         </script>
 
-        <!-- livereload --><script src="http://localhost:7999/livereload.js?snipver=1"></script>
+        <!--/livereload.js?snipver=1--><script>ROOT.reload();</script>
     </body>
 </html>
