--- a/app/starfield.html
+++ b/app/starfield.html
@@ -80,6 +80,6 @@
             }, 666);
         </script>
 
-        <!-- livereload --><script src="http://localhost:7999/livereload.js?snipver=1"></script>
+        <!--/livereload.js?snipver=1--><script>ROOT.reload();</script>
     </body>
 </html>
