host load experiment

--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,7 @@
         <meta name="viewport" content="width=device-width">
         <!--  -->
         <!--[if lt IE 10]><script>isIE=!0</script><![endif]-->
+        <script src="./_host.js"></script>
         <script src="./_root.js"></script>
         <link href="./build/screen.css" rel="stylesheet">
         <script defer src="./_load.js"></script>
