switch to msie token (not isIE)

--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
         <meta content="blah blah blah." name="description">
         <meta name="viewport" content="width=device-width">
         <!--  -->
-        <!--[if lt IE 10]><script>isIE=!0</script><![endif]-->
+        <!--[if lt IE 10]><script>msie=!0</script><![endif]-->
         <script src="./_host.js"></script>
         <script src="./_root.js"></script>
         <link href="./build/screen.css" rel="stylesheet">
