--- a/app/starfield.html
+++ b/app/starfield.html
@@ -16,7 +16,7 @@
         <meta name="viewport" content="width=device-width">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
         <!--  -->
-        <!--[if lt IE 10]><script>isIE=!0</script><![endif]-->
+        <!--[if lt IE 10]><script>msie=!0</script><![endif]-->
         <script src="./_root.js"></script>
         <link href="./build/screen.css" rel="stylesheet">
         <script defer src="./_load.js"></script>
