--- a/app/index.html
+++ b/app/index.html
@@ -38,8 +38,8 @@
             </div>
         </div>
             <div class="bs-example">
-                <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
-                <script src="http://getbootstrap.com/dist/js/bootstrap.min.js"></script>
+                <link href="/lib/bootstrap/3.2.0/bootstrap.min.css" rel="stylesheet">
+                <script src="/lib/bootstrap/3.2.0/bootstrap.min.js"></script>
 
                 <nav id="navbar-example2" class="navbar navbar-default navbar-static" role="navigation">
                     <div class="container-fluid">
