--- a/app/index.html
+++ b/app/index.html
@@ -1,7 +1,7 @@
 <!--[if IE]><![endif]--><!DOCTYPE html>
 <!--[if lt IE 8]>       <html lang="en" class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>          <html lang="en" class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!-->  <html lang="en" class="no-js"> <!--<![endif]-->
+<!--[if IE 8]>          <html lang="en" class="no-js lt-ie9">        <![endif]-->
+<!--[if gt IE 8]><!-->  <html lang="en" class="no-js">           <!--<![endif]-->
     <head>
         <meta charset="utf-8">
         <meta content="ie=edge" http-equiv="x-ua-compatible">
@@ -15,7 +15,8 @@
         <meta content="blah blah blah." name="description">
         <meta name="viewport" content="width=device-width">
         <!--  -->
-        <!--[if lt IE 10]><script>isIE=!0</script><![endif]-->
+        <!--[if lt IE 10]><script>msie=!0</script><![endif]-->
+        <script src="./_host.js"></script>
         <script src="./_root.js"></script>
         <link href="./build/screen.css" rel="stylesheet">
         <script defer src="./_load.js"></script>
@@ -37,8 +38,8 @@
             </div>
         </div>
             <div class="bs-example">
-                <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
-                <script src="http://getbootstrap.com/dist/js/bootstrap.min.js"></script>
+                <link href="/lib/bootstrap/3.2.0/bootstrap.min.css" rel="stylesheet">
+                <script src="/lib/bootstrap/3.2.0/bootstrap.min.js"></script>
 
                 <nav id="navbar-example2" class="navbar navbar-default navbar-static" role="navigation">
                     <div class="container-fluid">
