--- a/app/index.html
+++ b/app/index.html
@@ -14,9 +14,6 @@
         <meta name="description" content="blah blah blah.">
         <meta name="viewport" content="width=device-width">
         <!--  -->
-        <!--[if lt IE 10]><script>msie=!0</script><![endif]-->
-        <script src="./_host.js"></script>
-        <script src="./_root.js"></script>
     </head>
     <body class=""><noscript> error: scripting is disabled </noscript>
         <div class="wrapper">
@@ -30,6 +27,6 @@
 
         </div>
 
-        <!--/livereload.js?snipver=1--><script>ROOT.reload();</script>
+        <!--[if IE]><div style='clear: both; height: 112px; padding:0; position: relative;'><a href="http://www.theie8countdown.com/ie-users-info"><img src="http://www.theie8countdown.com/assets/badge_iecountdown.png" border="0" height="112" width="348" alt="" /></a></div><![endif]-->
     </body>
 </html>
