--- a/app/slots.html
+++ b/app/slots.html
@@ -1,21 +1,32 @@
-<!DOCTYPE html>
-<html lang="en">
+<!--[if IE]><![endif]--><!DOCTYPE html>
+<!--[if lt IE 8]>       <html lang="en" class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>          <html lang="en" class="no-js lt-ie9">        <![endif]-->
+<!--[if gt IE 8]><!-->  <html lang="en" class="no-js">           <!--<![endif]-->
     <head>
+        <meta charset="utf-8">
+        <meta content="ie=edge" http-equiv="x-ua-compatible">
+        <meta http-equiv="cache-control" content="max-age=0, must-revalidate">
+        <script>l=location,s=l.pathname,t=s.toLowerCase();t=t.match(/\w+\.\w+$/)?
+                t:t.replace(/\/*$/,'/index.html');t!==s&&(l.pathname=t);</script>
+        <!--  -->
         <title>SimpleGrid</title>
-
-        <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7; IE=EmulateIE9">
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+        <!--[if lt IE 10]><script>msie=!0</script><![endif]-->
+        <script src="./_host.js"></script>
+        <script src="./_root.js"></script>
 
         <link rel="stylesheet" href="./build/slots.css" type="text/css" media="all">
-        <!--[if lt IE 9 ]><link rel="stylesheet" href="./css/720_grid.css" type="text/css"><![endif]-->
+        <script src="./vendor/msie/respond.js"></script>
         <style>
             body {
                 background-color: white;
             }
+            .lt-ie9 div div { background-color: rgb(234,234,234); }
             div div {
                 background-color: rgba(111,111,111,0.1);
             }
+            .lt-ie9 .example-slots .row { background-color: rgb(255,255,255); }
+            .lt-ie9 .example-slots .row p { background-color: rgb(255,255,244); }
             .example-slots .row p {
                 background-color: rgba(255,255,222,0.3);
                 border-radius: 6px;
