update meta filler

--- a/app/index.html
+++ b/app/index.html
@@ -10,8 +10,8 @@
                 t:t.replace(/\/*$/,'/index.html');t!==s&&(l.pathname=t);</script>
         <!--  -->
         <title>_model_</title>
-        <meta name="author" content="WF-ECG Interactive Design (IxD) -- best practices + good times + web standards.">
-        <meta name="description" content="blah blah blah.">
+        <meta name="author" content="ECG Interactive Design (IxD)">
+        <meta name="description" content="Good times + Web standards.">
         <meta name="viewport" content="width=device-width">
         <!--  -->
     </head>
