--- a/app/strap.html
+++ b/app/strap.html
@@ -21,6 +21,57 @@
         <link href="./build/screen.css" rel="stylesheet">
         <link href="./vendor/bootstrap/bootstrap.min.css" rel="stylesheet">
         <script src="./vendor/bootstrap/bootstrap.min.js"></script>
+        <style>
+            body {
+                //background-color: #333!important;
+            }
+            .grox {
+                background:
+                    linear-gradient(gray 30%, transparent) top, /* mask */
+                    linear-gradient(transparent, gray 70%) bottom, /* mask */
+                    linear-gradient(rgba(0,0,0,0.2) 20%, transparent) top,
+                    linear-gradient(transparent, rgba(0,0,0,0.2) 80%) bottom;
+                background-attachment: local, local, scroll, scroll;
+                background-repeat: no-repeat;
+                background-size: 100% 10%, 100% 10%, 100% 2em, 100% 2em;
+                border: 1px solid #777;
+                height: 300px;
+                margin-top: 10px;
+                overflow: auto;
+                position: relative;
+                padding: 1em;
+            }
+
+            .grox:before {
+                box-shadow: inset 0 0 6px 3px #777;
+                content: ' ';
+                height: 300px;
+                position: fixed;
+                width: 98%;
+                margin: -1em;
+            }
+            .grox::-webkit-scrollbar-button { background-color: red; }
+/*            .grox::-webkit-scrollbar-track-piece { background-color: lime; }*/
+            .grox::-webkit-scrollbar-corner { background-color: red; }
+            .grox::-webkit-resizer { background-color: red; }
+
+            .grox::-webkit-scrollbar {
+                min-width: 10px;
+                width: 2%;
+            }
+            .grox::-webkit-scrollbar-track {
+                background-color: #333;
+                border-left: 1px solid gray;
+            }
+            .grox::-webkit-scrollbar-thumb {
+                background-color: #ccc;
+            }
+            .grox::-webkit-scrollbar-thumb:hover {
+                background-color: #aaa;
+            }
+
+
+        </style>
     </head>
     <body class="loading"><noscript> error: scripting is disabled </noscript>
         <div class="wrapper">
@@ -56,7 +107,7 @@
                     </div>
                 </nav>
 
-                <div data-spy="scroll" data-target="#navbar-example2" data-offset="0" class="scrollspy-example" style ="position: relative;height: 200px;margin-top: 10px;overflow: auto;">
+                <div data-spy="scroll" data-target="#navbar-example2" data-offset="0" class="scrollspy-example grox">
                     <h4 id="fat">@fat</h4>
                     <p>Ad leggings keytar, brunch id art party dolor labore. Pitchfork yr enim lo-fi before they sold out qui. Tumblr farm-to-table bicycle rights whatever. Anim keffiyeh carles cardigan. Velit seitan mcsweeney's photo booth 3 wolf moon irure. Cosby sweater lomo jean shorts, williamsburg hoodie minim qui you probably haven't heard of them et cardigan trust fund culpa biodiesel wes anderson aesthetic. Nihil tattooed accusamus, cred irony biodiesel keffiyeh artisan ullamco consequat.</p>
                     <h4 id="mdo">@mdo</h4>
