--- a/app/index.html
+++ b/app/index.html
@@ -3,16 +3,16 @@
 <!--[if IE 8]>          <html lang="en" class="no-js lt-ie9">        <![endif]-->
 <!--[if gt IE 8]><!-->  <html lang="en" class="no-js">           <!--<![endif]-->
     <head>
-        <meta charset="utf-8">
-        <meta content="ie=edge" http-equiv="x-ua-compatible">
-        <meta http-equiv="cache-control" content="max-age=0, must-revalidate">
-        <script>l=location,s=l.pathname,t=s.toLowerCase();t=t.match(/\w+\.\w+$/)?
-                t:t.replace(/\/*$/,'/index.html');t!==s&&(l.pathname=t);</script>
-        <!--  -->
         <title>_model_</title>
+        <meta charset="utf-8">
+        <meta http-equiv="x-ua-compatible" content="ie=edge">
+        <meta http-equiv="cache-control" content="max-age=0, must-revalidate">
         <meta name="author" content="ECG Interactive Design (IxD)">
         <meta name="description" content="Good times + Web standards.">
         <meta name="viewport" content="width=device-width">
+        <!--  -->
+        <script>(function(l,i,s,t){s=l.pathname;t=s.toLowerCase().replace(/index/,i||'index');t=t.match
+            (/\w+\.\w+$/)?t:t.replace(/\/*$/,'/index.html');if(t!==s)l.pathname=t;}(location,'slide'));</script>
         <!--  -->
     </head>
     <body class=""><noscript> error: scripting is disabled </noscript>
