migrate ROOT to HOST

--- a/app/slide.html
+++ b/app/slide.html
@@ -15,7 +15,6 @@
         <!--  -->
         <!--[if lt IE 10]><script>msie=!0</script><![endif]-->
         <script src="./_host.js"></script>
-        <script src="./_root.js"></script>
         <link href="./build/screen.css" rel="stylesheet">
     </head>
     <body class="loading"><noscript> error: scripting is disabled </noscript>
@@ -39,6 +38,6 @@
 
         <script src="./_load.js"></script>
 
-        <!--/livereload.js?snipver=1--><script>ROOT.reload();</script>
+        <!--/livereload.js?snipver=1--><script>HOST.reload();</script>
     </body>
 </html>
