--- a/app/starfield.html
+++ b/app/starfield.html
@@ -16,7 +16,6 @@
         <!--  -->
         <!--[if lt IE 10]><script>msie=!0</script><![endif]-->
         <script src="./_host.js"></script>
-        <script src="./_root.js"></script>
         <link href="./build/screen.css" rel="stylesheet">
         <script defer src="./_load.js"></script>
     </head>
@@ -79,6 +78,6 @@
             }, 666);
         </script>
 
-        <!--/livereload.js?snipver=1--><script>ROOT.reload();</script>
+        <!--/livereload.js?snipver=1--><script>HOST.reload();</script>
     </body>
 </html>
