--- a/app/strap.html
+++ b/app/strap.html
@@ -15,7 +15,6 @@
         <!--  -->
         <!--[if lt IE 10]><script>msie=!0</script><![endif]-->
         <script src="./_host.js"></script>
-        <script src="./_root.js"></script>
         <link href="./build/screen.css" rel="stylesheet">
         <link href="./vendor/bootstrap/bootstrap.min.css" rel="stylesheet">
         <script src="./vendor/bootstrap/bootstrap.min.js"></script>
@@ -130,6 +129,6 @@
             }, 999);
         </script>
 
-        <!--/livereload.js?snipver=1--><script>ROOT.reload();</script>
+        <!--/livereload.js?snipver=1--><script>HOST.reload();</script>
     </body>
 </html>
