prepare to repo libs

--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
         <meta name="viewport" content="width=device-width">
         <!--  -->
         <script>(function(l,i,s,t){s=l.pathname;t=s.toLowerCase().replace(/index/,i||'index');t=t.match
-            (/\w+\.\w+$/)?t:t.replace(/\/*$/,'/index.html');if(t!==s)l.pathname=t;}(location,'slide'));</script>
+            (/\w+\.\w+$/)?t:t.replace(/\/*$/,'/index.html');if(t!==s)l.pathname=t;}(location));</script>
         <!--  -->
     </head>
     <body class=""><noscript> error: scripting is disabled </noscript>
