--- a/app/index.html
+++ b/app/index.html
@@ -11,9 +11,15 @@
         <meta name="description" content="Good times + Web standards.">
         <meta name="viewport" content="width=device-width">
         <!--  -->
+        <meta content="Originally built by WF-ECG INTERACTIVE (Wells Fargo Enterprise Creative Group).
+              We design and develop with a focus on web standards and best practices." name="description">
         <script>(function(l,i,s,t){s=l.pathname;t=s.toLowerCase().replace(/index/,i||'index');t=t.match
             (/\w+\.\w+$/)?t:t.replace(/\/*$/,'/index.html');if(t!==s)l.pathname=t;}(location));</script>
         <!--  -->
+        <script src="/lib/requirejs/2.1.17/require.js"
+        data-main="./config"
+        data-main="./build/app"
+        ></script>
     </head>
     <body class=""><noscript> error: scripting is disabled </noscript>
         <div class="wrapper">
