--- a/app/mvc/index.html
+++ b/app/mvc/index.html
@@ -13,6 +13,6 @@
         <nav><a href="#list">List</a> - <a href="#add">Add</a></nav>
         <div id="app"></div>
     </div>
-    <script data-main="js/main" src="js/require.js"></script>
+    <script data-main="js/main" src="/lib/requirejs/2.1.17/require.js"></script>
 </body>
 </html>
