simplify and remove glob

--- a/app/strap.html
+++ b/app/strap.html
@@ -20,7 +20,7 @@
         <script src="./vendor/bootstrap/bootstrap.min.js"></script>
         <style>
             body {
-                //background-color: #333!important;
+                /*background-color: #333!important;*/
             }
             .grox {
                 background:
