--- a/app/multipage/www/page1.html
+++ b/app/multipage/www/page1.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Page 1</title>
-        <script data-main="js/page1" src="js/lib/require.js"></script>
+        <script data-main="js/page1" src="/lib/requirejs/2.1.17/require.js"></script>
     </head>
     <body>
         <a href="page2.html">Go to Page 2</a>
