--- a/app/multipage/www/page2.html
+++ b/app/multipage/www/page2.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Page 2</title>
-        <script data-main="js/page2" src="js/lib/require.js"></script>
+        <script data-main="js/page2" src="/lib/requirejs/2.1.17/require.js"></script>
     </head>
     <body>
         <a href="page1.html">Go to Page 1</a>
