--- a/app/index.html
+++ b/app/index.html
@@ -1,7 +1,5 @@
-<!--[if IE]><![endif]--><!DOCTYPE html>
-<!--[if lt IE 8]>       <html lang="en" class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>          <html lang="en" class="no-js lt-ie9">        <![endif]-->
-<!--[if gt IE 8]><!-->  <html lang="en" class="no-js">           <!--<![endif]-->
+<!DOCTYPE html>
+<html lang="en" class="no-js">
     <head>
         <title>_model_</title>
         <meta charset="utf-8">
@@ -29,10 +27,10 @@
                 <li><a href="slots.html">slots</a></li>
                 <li><a href="starfield.html">starfield</a></li>
                 <li><a href="strap.html">strap</a></li>
+                <li><a href="multipage/www/page1.html">multipage</a></li>
             </ul>
 
         </div>
 
-        <!--[if IE]><div style='clear: both; height: 112px; padding:0; position: relative;'><a href="http://www.theie8countdown.com/ie-users-info"><img src="http://www.theie8countdown.com/assets/badge_iecountdown.png" border="0" height="112" width="348" alt="" /></a></div><![endif]-->
     </body>
 </html>
