--- a/app/strap.html
+++ b/app/strap.html
@@ -1,7 +1,5 @@
-<!--[if IE]><![endif]--><!DOCTYPE html>
-<!--[if lt IE 8]>       <html lang="en" class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>          <html lang="en" class="no-js lt-ie9">        <![endif]-->
-<!--[if gt IE 8]><!-->  <html lang="en" class="no-js">           <!--<![endif]-->
+<!DOCTYPE html>
+<html lang="en" class="no-js">
     <head>
         <meta charset="utf-8">
         <meta content="ie=edge" http-equiv="x-ua-compatible">
