--- a/app/tests/slots.html
+++ b/app/tests/slots.html
@@ -8,10 +8,8 @@
         <title>SimpleGrid</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
         <!--[if lt IE 10]><script>msie=!0</script><![endif]-->
-        <script src="./_host.js"></script>
 
-        <link rel="stylesheet" href="./build/slots.css" type="text/css" media="all">
-        <script src="./vendor/msie/respond.js"></script>
+        <link rel="stylesheet" href="../build/slots.css">
         <style>
             body {
                 background-color: white;
