--- a/app/index.html
+++ b/app/index.html
@@ -1,36 +1,36 @@
 <!DOCTYPE html>
 <html lang="en" class="no-js">
-    <head>
-        <title>_model_</title>
-        <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <meta http-equiv="cache-control" content="max-age=0, must-revalidate">
-        <meta name="author" content="ECG Interactive Design (IxD)">
-        <meta name="description" content="Good times + Web standards.">
-        <meta name="viewport" content="width=device-width">
-        <!--  -->
-        <meta content="Originally built by WF-ECG INTERACTIVE (Wells Fargo Enterprise Creative Group).
-              We design and develop with a focus on web standards and best practices." name="description">
+  <head>
+    <title>_model_</title>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta http-equiv="cache-control" content="max-age=0, must-revalidate">
+    <meta name="author" content="ECG Interactive Design (IxD)">
+    <meta name="description" content="Good times + Web standards.">
+    <meta name="viewport" content="width=device-width">
+    <!--  -->
+    <meta content="Originally built by WF-ECG INTERACTIVE (Wells Fargo Enterprise Creative Group).
+          We design and develop with a focus on web standards and best practices." name="description">
         <script>(function(l,i,s,t){s=l.pathname;t=s.toLowerCase().replace(/index/,i||'index');t=t.match
             (/\w+\.\w+$/)?t:t.replace(/\/*$/,'/index.html');if(t!==s)l.pathname=t;}(location));</script>
-        <!--  -->
-        <script src="/lib/requirejs/2.1.17/require.js"
-        data-main="./config"
-        data-main="./build/app"
-        ></script>
-    </head>
-    <body class=""><noscript> error: scripting is disabled </noscript>
-        <div class="wrapper">
+    <!--  -->
+    <script src="/lib/requirejs/2.1.17/require.js"
+            data-main="./config"
+            data-main="./build/app"
+    ></script>
+  </head>
+  <body class=""><noscript> error: scripting is disabled </noscript>
+    <div class="wrapper">
 
-            <ul>
-                <li><a href="slide.html">slide</a></li>
-                <li><a href="slots.html">slots</a></li>
-                <li><a href="starfield.html">starfield</a></li>
-                <li><a href="strap.html">strap</a></li>
-                <li><a href="multipage/www/page1.html">multipage</a></li>
-            </ul>
+      <ul>
+        <li><a href="tests/slide.html">slide</a></li>
+        <li><a href="tests/slots.html">slots</a></li>
+        <li><a href="tests/starfield.html">starfield</a></li>
+        <li><a href="tests/strap.html">strap</a></li>
+        <li><a href="tests/multipage/www/page1.html">multipage</a></li>
+      </ul>
 
-        </div>
+    </div>
 
-    </body>
+  </body>
 </html>
