--- a/app/index.html
+++ b/app/index.html
@@ -26,8 +26,9 @@
         <li><a href="tests/slide.html">slide</a></li>
         <li><a href="tests/slots.html">slots</a></li>
         <li><a href="tests/starfield.html">starfield</a></li>
-        <li><a href="tests/strap.html">strap</a></li>
-        <li><a href="tests/multipage/www/page1.html">multipage</a></li>
+        <li><a href="tests/mvc/">mvc</a></li>
+        <li><a href="tests/strap/">strap</a></li>
+        <li><a href="tests/multipage/">multipage</a></li>
       </ul>
 
     </div>
