--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,7 @@
       <ul>
         <li><a href="tests/slide.html">slide</a></li>
         <li><a href="tests/slots.html">slots</a></li>
-        <li><a href="tests/starfield.html">starfield</a></li>
+        <li><a href="tests/stars/">starfield</a></li>
         <li><a href="tests/mvc/">mvc</a></li>
         <li><a href="tests/strap/">strap</a></li>
         <li><a href="tests/multipage/">multipage</a></li>
