--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,7 @@
     <div class="wrapper">
 
       <ul>
-        <li><a href="tests/slide.html">slide</a></li>
+        <li><a href="tests/slide/">slide</a></li>
         <li><a href="tests/slots.html">slots</a></li>
         <li><a href="tests/stars/">starfield</a></li>
         <li><a href="tests/mvc/">mvc</a></li>
