--- a/app/tests/slide/index.html
+++ b/app/tests/slide/index.html
@@ -13,11 +13,9 @@
         <meta content="blah blah blah." name="description">
         <meta name="viewport" content="width=device-width">
         <!--  -->
-        <!--[if lt IE 10]><script>msie=!0</script><![endif]-->
-        <!--<script src="./_host.js"></script>-->
-        <link href="./build/screen.css" rel="stylesheet">
+        <link href="../../build/screen.css" rel="stylesheet">
         <script src="/lib/requirejs/2.1.17/require.js"
-                data-main="./config"
+                data-main="./_main"
                 data-main="./build/app"
         ></script>
     </head>
@@ -27,10 +25,10 @@
             <div class="iS-port">
 
                 <div class="iS-view">
-                    <img class="c1" src="./images/metal.png">
-                    <img class="c2" src="./images/metal.png">
-                    <img class="c3" src="./images/metal.png">
-                    <img class="c4" src="./images/metal.png">
+                    <img class="c1" src="../../images/metal.png">
+                    <img class="c2" src="../../images/metal.png">
+                    <img class="c3" src="../../images/metal.png">
+                    <img class="c4" src="../../images/metal.png">
                 </div>
 
                 <div title="slideshow" class="iS-proxy">
@@ -40,8 +38,5 @@
 
         </div>
 
-        <!--<script src="./_load.js"></script>-->
-
-        <!--/livereload.js?snipver=1--><!--<script>HOST.reload();</script>-->
     </body>
 </html>
