compile wip: recofig all

--- a/app/index.html
+++ b/app/index.html
@@ -1,38 +1,37 @@
-<!--[if IE]><![endif]--><!DOCTYPE html>
-<!--[if lt IE 8]>       <html lang="en" class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>          <html lang="en" class="no-js lt-ie9">        <![endif]-->
-<!--[if gt IE 8]><!-->  <html lang="en" class="no-js">           <!--<![endif]-->
-    <head>
-        <title>_model_</title>
-        <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <meta http-equiv="cache-control" content="max-age=0, must-revalidate">
-        <meta name="author" content="ECG Interactive Design (IxD)">
-        <meta name="description" content="Good times + Web standards.">
-        <meta name="viewport" content="width=device-width">
-        <!--  -->
-        <meta content="Originally built by WF-ECG INTERACTIVE (Wells Fargo Enterprise Creative Group).
-              We design and develop with a focus on web standards and best practices." name="description">
+<!DOCTYPE html>
+<html lang="en" class="no-js">
+  <head>
+    <title>_model_</title>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta http-equiv="cache-control" content="max-age=0, must-revalidate">
+    <meta name="author" content="ECG Interactive Design (IxD)">
+    <meta name="description" content="Good times + Web standards.">
+    <meta name="viewport" content="width=device-width">
+    <!--  -->
+    <meta content="Originally built by WF-ECG INTERACTIVE (Wells Fargo Enterprise Creative Group).
+          We design and develop with a focus on web standards and best practices." name="description">
         <script>(function(l,i,s,t){s=l.pathname;t=s.toLowerCase().replace(/index/,i||'index');t=t.match
             (/\w+\.\w+$/)?t:t.replace(/\/*$/,'/index.html');if(t!==s)l.pathname=t;}(location));</script>
-        <!--  -->
-        <script src="/lib/requirejs/2.1.17/require.js"
-        data-main="./config"
-        data-main="./build/app"
-        ></script>
-    </head>
-    <body class=""><noscript> error: scripting is disabled </noscript>
-        <div class="wrapper">
+    <!--  -->
+    <script src="/lib/requirejs/2.1.17/require.js"
+            data-main="./config"
+            data-main="./build/app"
+    ></script>
+  </head>
+  <body class=""><noscript> error: scripting is disabled </noscript>
+    <div class="wrapper">
 
-            <ul>
-                <li><a href="slide.html">slide</a></li>
-                <li><a href="slots.html">slots</a></li>
-                <li><a href="starfield.html">starfield</a></li>
-                <li><a href="strap.html">strap</a></li>
-            </ul>
+      <ul>
+        <li><a href="tests/slide/">slide</a></li>
+        <li><a href="tests/slots.html">slots</a></li>
+        <li><a href="tests/stars/">starfield</a></li>
+        <li><a href="tests/mvc/">mvc</a></li>
+        <li><a href="tests/strap/">strap</a></li>
+        <li><a href="tests/multipage/">multipage</a></li>
+      </ul>
 
-        </div>
+    </div>
 
-        <!--[if IE]><div style='clear: both; height: 112px; padding:0; position: relative;'><a href="http://www.theie8countdown.com/ie-users-info"><img src="http://www.theie8countdown.com/assets/badge_iecountdown.png" border="0" height="112" width="348" alt="" /></a></div><![endif]-->
-    </body>
+  </body>
 </html>
