--- a/app/tests/multipage/www/page1.html
+++ b/app/tests/multipage/www/page1.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Page 1</title>
-        <script data-main="js/page1" src="/lib/requirejs/2.1.17/require.js"></script>
-    </head>
-    <body>
-        <a href="page2.html">Go to Page 2</a>
-    </body>
+  <head>
+    <title>multipage Page 1</title>
+    <script data-main="js/page1" src="/lib/requirejs/2.1.17/require.js"></script>
+  </head>
+  <body>
+    <a href="page2.html">Go to Page 2</a>
+  </body>
 </html>
