--- a/app/tests/mvc/index.html
+++ b/app/tests/mvc/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <!-- saved from url=(0040)http://verekia.com/demo/require-js/#list -->
 <html>
-<head>
+  <head>
     <meta charset="utf-8">
-    <title>A simple MVC structure</title>
+    <title>MVC</title>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
+  </head>
+  <body>
     <div id="container">
-        <h1>My users</h1>
-        <nav><a href="#list">List</a> - <a href="#add">Add</a></nav>
-        <div id="app"></div>
+      <h1>My users</h1>
+      <nav><a href="#list">List</a> - <a href="#add">Add</a></nav>
+      <div id="app"></div>
     </div>
     <script data-main="js/main" src="/lib/requirejs/2.1.17/require.js"></script>
-</body>
+  </body>
 </html>
