--- a/app/tests/stars/index.html
+++ b/app/tests/stars/index.html
@@ -13,7 +13,7 @@
           We design and develop with a focus on web standards and best practices." name="author">
     <meta content="blah blah blah." name="description">
     <!--  -->
-    <link href="../../build/screen.css" rel="stylesheet">
+    <link href="../../build/stars.css" rel="stylesheet">
     <script src="/lib/requirejs/2.1.17/require.js"
             data-main="./_main"
             data-main="./build/app"
