--- a/app/tests/strap/index.html
+++ b/app/tests/strap/index.html
@@ -13,63 +13,11 @@
           We design and develop with a focus on web standards and best practices." name="author">
     <meta content="blah blah blah." name="description">
     <!--  -->
-    <link href="/mfal/lib/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
     <script src="/lib/requirejs/2.1.17/require.js"
             data-main="./_main"
             data-main="./build/app"
     ></script>
-    <link href="../../build/screen.css" rel="stylesheet">
-    <style>
-      body {
-          /*background-color: #333!important;*/
-      }
-      .grox {
-          background:
-              linear-gradient(gray 30%, transparent) top, /* mask */
-              linear-gradient(transparent, gray 70%) bottom, /* mask */
-              linear-gradient(rgba(0,0,0,0.2) 20%, transparent) top,
-              linear-gradient(transparent, rgba(0,0,0,0.2) 80%) bottom;
-          background-attachment: local, local, scroll, scroll;
-          background-repeat: no-repeat;
-          background-size: 100% 10%, 100% 10%, 100% 2em, 100% 2em;
-          border: 1px solid #777;
-          height: 300px;
-          margin-top: 10px;
-          overflow: auto;
-          position: relative;
-          padding: 1em;
-      }
-
-      .grox:before {
-          box-shadow: inset 0 0 6px 3px #777;
-          content: ' ';
-          height: 300px;
-          position: fixed;
-          width: 98%;
-          margin: -1em;
-      }
-      .grox::-webkit-scrollbar-button { background-color: red; }
-      /*            .grox::-webkit-scrollbar-track-piece { background-color: lime; }*/
-      .grox::-webkit-scrollbar-corner { background-color: red; }
-      .grox::-webkit-resizer { background-color: red; }
-
-      .grox::-webkit-scrollbar {
-          min-width: 10px;
-          width: 2%;
-      }
-      .grox::-webkit-scrollbar-track {
-          background-color: #333;
-          border-left: 1px solid gray;
-      }
-      .grox::-webkit-scrollbar-thumb {
-          background-color: #ccc;
-      }
-      .grox::-webkit-scrollbar-thumb:hover {
-          background-color: #aaa;
-      }
-
-
-    </style>
+    <link href="../../build/strap.css" rel="stylesheet">
   </head>
   <body class="loading"><noscript> error: scripting is disabled </noscript>
     <div class="wrapper">
