compile wip: finish big refactor

--- a/app/tests/stars/index.html
+++ b/app/tests/stars/index.html
@@ -1,37 +1,39 @@
 <!DOCTYPE html>
 <html lang="en" class="no-js starfield test">
-    <head>
-        <meta charset="utf-8">
-        <meta content="ie=edge" http-equiv="x-ua-compatible">
-        <meta http-equiv="cache-control" content="max-age=0, must-revalidate">
-        <!--  -->
-        <title>stars</title>
-        <meta content="Originally built by WF-ECG INTERACTIVE (Wells Fargo Enterprise Creative Group).
-              We design and develop with a focus on web standards and best practices." name="author">
-        <meta content="blah blah blah." name="description">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
-        <!--  -->
-        <link href="../../build/screen.css" rel="stylesheet">
-        <script src="/lib/requirejs/2.1.17/require.js"
-                data-main="./_main"
-                data-main="./build/app"
-        ></script>
-    </head>
-    <body class="loading"><noscript> error: scripting is disabled </noscript>
-        <div class="wrapper">
+  <head>
+    <title>stars</title>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta http-equiv="cache-control" content="max-age=0, must-revalidate">
+    <meta name="viewport" content="width=device-width">
+    <script>(function(l,i,s,t){s=l.pathname;t=s.toLowerCase().replace(/index/,i||'index');t=t.match
+        (/\w+\.\w+$/)?t:t.replace(/\/*$/,'/index.html');if(t!==s)l.pathname=t;}(location));</script>
+    <!--  -->
+    <meta content="Originally built by WF-ECG INTERACTIVE (Wells Fargo Enterprise Creative Group).
+          We design and develop with a focus on web standards and best practices." name="author">
+    <meta content="blah blah blah." name="description">
+    <!--  -->
+    <link href="../../build/stars.css" rel="stylesheet">
+    <script src="/lib/requirejs/2.1.17/require.js"
+            data-main="./_main"
+            data-main="./build/app"
+    ></script>
+  </head>
+  <body class="loading"><noscript> error: scripting is disabled </noscript>
+    <div class="wrapper">
 
-            <div class="stars field0" id="tmp0">
-                <div class="touch">STAR 0</div>
-            </div>
+      <div class="stars field0" id="tmp0">
+        <div class="touch">STAR 0</div>
+      </div>
 
-            <div class="stars field1" id="tmp1">
-                <div>STAR 1</div>
-            </div>
+      <div class="stars field1" id="tmp1">
+        <div>STAR 1</div>
+      </div>
 
-            <div class="stars field2" id="tmp2">
-                <div>STAR 2</div>
-            </div>
-        </div>
+      <div class="stars field2" id="tmp2">
+        <div>STAR 2</div>
+      </div>
+    </div>
 
-    </body>
+  </body>
 </html>
