--- a/app/tests/slide/index.html
+++ b/app/tests/slide/index.html
@@ -1,42 +1,42 @@
-<!--[if IE]><![endif]--><!DOCTYPE html>
-<!--[if lt IE 8]>       <html lang="en" class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>          <html lang="en" class="no-js lt-ie9">        <![endif]-->
-<!--[if gt IE 8]><!-->  <html lang="en" class="no-js">           <!--<![endif]-->
-    <head>
-        <meta charset="utf-8">
-        <meta content="ie=edge" http-equiv="x-ua-compatible">
-        <meta http-equiv="cache-control" content="max-age=0, must-revalidate">
-        <!--  -->
-        <title>_model_</title>
-        <meta content="Originally built by WF-ECG INTERACTIVE (Wells Fargo Enterprise Creative Group).
-              We design and develop with a focus on web standards and best practices." name="author">
-        <meta content="blah blah blah." name="description">
-        <meta name="viewport" content="width=device-width">
-        <!--  -->
-        <link href="../../build/screen.css" rel="stylesheet">
-        <script src="/lib/requirejs/2.1.17/require.js"
-                data-main="./_main"
-                data-main="./build/app"
-        ></script>
-    </head>
-    <body class="loading"><noscript> error: scripting is disabled </noscript>
-        <div class="wrapper">
+<!DOCTYPE html>
+<html lang="en" class="no-js">
+  <head>
+    <title>slide</title>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta http-equiv="cache-control" content="max-age=0, must-revalidate">
+    <meta name="viewport" content="width=device-width">
+    <script>(function(l,i,s,t){s=l.pathname;t=s.toLowerCase().replace(/index/,i||'index');t=t.match
+        (/\w+\.\w+$/)?t:t.replace(/\/*$/,'/index.html');if(t!==s)l.pathname=t;}(location));</script>
+    <!--  -->
+    <meta content="Originally built by WF-ECG INTERACTIVE (Wells Fargo Enterprise Creative Group).
+          We design and develop with a focus on web standards and best practices." name="author">
+    <meta content="blah blah blah." name="description">
+    <!--  -->
+    <link href="../../build/main.css" rel="stylesheet">
+    <script src="/lib/requirejs/2.1.17/require.js"
+            data-main="./_main"
+            data-main="./build/app"
+    ></script>
+  </head>
+  <body class="loading"><noscript> error: scripting is disabled </noscript>
+    <div class="wrapper">
 
-            <div class="iS-port">
+      <div class="iS-port">
 
-                <div class="iS-view">
-                    <img class="c1" src="../../images/metal.png">
-                    <img class="c2" src="../../images/metal.png">
-                    <img class="c3" src="../../images/metal.png">
-                    <img class="c4" src="../../images/metal.png">
-                </div>
-
-                <div title="slideshow" class="iS-proxy">
-                    <span title="start/stop" class="control iS-peg"></span>
-                </div>
-            </div>
-
+        <div class="iS-view">
+          <img class="c1" src="../../images/metal.png">
+          <img class="c2" src="../../images/metal.png">
+          <img class="c3" src="../../images/metal.png">
+          <img class="c4" src="../../images/metal.png">
         </div>
 
-    </body>
+        <div title="slideshow" class="iS-proxy">
+          <span title="start/stop" class="control iS-peg"></span>
+        </div>
+      </div>
+
+    </div>
+
+  </body>
 </html>
