--- a/app/tests/strap/index.html
+++ b/app/tests/strap/index.html
@@ -1,124 +1,96 @@
 <!DOCTYPE html>
 <html lang="en" class="no-js">
-    <head>
-        <meta charset="utf-8">
-        <meta content="ie=edge" http-equiv="x-ua-compatible">
-        <meta http-equiv="cache-control" content="max-age=0, must-revalidate">
-        <!--  -->
-        <title>_model_</title>
-        <meta content="Originally built by WF-ECG INTERACTIVE (Wells Fargo Enterprise Creative Group).
-              We design and develop with a focus on web standards and best practices." name="author">
-        <meta content="blah blah blah." name="description">
-        <meta name="viewport" content="width=device-width">
-        <!--  -->
-        <link href="/mfal/lib/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
-        <script src="/lib/requirejs/2.1.17/require.js"
-                data-main="./_main"
-                data-main="./build/app"
-        ></script>
-        <link href="../../build/screen.css" rel="stylesheet">
-        <style>
-            body {
-                /*background-color: #333!important;*/
-            }
-            .grox {
-                background:
-                    linear-gradient(gray 30%, transparent) top, /* mask */
-                    linear-gradient(transparent, gray 70%) bottom, /* mask */
-                    linear-gradient(rgba(0,0,0,0.2) 20%, transparent) top,
-                    linear-gradient(transparent, rgba(0,0,0,0.2) 80%) bottom;
-                background-attachment: local, local, scroll, scroll;
-                background-repeat: no-repeat;
-                background-size: 100% 10%, 100% 10%, 100% 2em, 100% 2em;
-                border: 1px solid #777;
-                height: 300px;
-                margin-top: 10px;
-                overflow: auto;
-                position: relative;
-                padding: 1em;
-            }
+  <head>
+    <title>strap</title>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta http-equiv="cache-control" content="max-age=0, must-revalidate">
+    <meta name="viewport" content="width=device-width">
+    <script>(function(l,i,s,t){s=l.pathname;t=s.toLowerCase().replace(/index/,i||'index');t=t.match
+        (/\w+\.\w+$/)?t:t.replace(/\/*$/,'/index.html');if(t!==s)l.pathname=t;}(location));</script>
+    <!--  -->
+    <meta content="Originally built by WF-ECG INTERACTIVE (Wells Fargo Enterprise Creative Group).
+          We design and develop with a focus on web standards and best practices." name="author">
+    <meta content="blah blah blah." name="description">
+    <!--  -->
+    <script src="/lib/requirejs/2.1.17/require.js"
+            data-main="./_main"
+            data-main="./build/app"
+    ></script>
+    <link href="../../build/strap.css" rel="stylesheet">
+  </head>
+  <body class="loading"><noscript> error: scripting is disabled </noscript>
+    <div class="wrapper">
 
-            .grox:before {
-                box-shadow: inset 0 0 6px 3px #777;
-                content: ' ';
-                height: 300px;
-                position: fixed;
-                width: 98%;
-                margin: -1em;
-            }
-            .grox::-webkit-scrollbar-button { background-color: red; }
-/*            .grox::-webkit-scrollbar-track-piece { background-color: lime; }*/
-            .grox::-webkit-scrollbar-corner { background-color: red; }
-            .grox::-webkit-resizer { background-color: red; }
+      <div class="bs-example">
 
-            .grox::-webkit-scrollbar {
-                min-width: 10px;
-                width: 2%;
-            }
-            .grox::-webkit-scrollbar-track {
-                background-color: #333;
-                border-left: 1px solid gray;
-            }
-            .grox::-webkit-scrollbar-thumb {
-                background-color: #ccc;
-            }
-            .grox::-webkit-scrollbar-thumb:hover {
-                background-color: #aaa;
-            }
+        <nav id="navbar-example2" class="navbar navbar-default navbar-static" role="navigation">
+          <div class="container-fluid">
+            <div class="navbar-header">
+              <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target=".bs-example-js-navbar-scrollspy">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <a class="navbar-brand" href="#">Project Name</a>
+            </div>
+            <div class="collapse navbar-collapse bs-example-js-navbar-scrollspy">
+              <ul class="nav navbar-nav">
+                <li><a href="#fat">@fat</a></li>
+                <li><a href="#mdo">@mdo</a></li>
+                <li class="dropdown">
+                  <a href="#" id="navbarDrop1" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
+                  <ul class="dropdown-menu" role="menu" aria-labelledby="navbarDrop1">
+                    <li><a href="#one" tabindex="-1">one</a></li>
+                    <li><a href="#two" tabindex="-1">two</a></li>
+                    <li class="divider"></li>
+                    <li><a href="#three" tabindex="-1">three</a></li>
+                  </ul>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
 
-
-        </style>
-    </head>
-    <body class="loading"><noscript> error: scripting is disabled </noscript>
-        <div class="wrapper">
-
-            <div class="bs-example">
-
-                <nav id="navbar-example2" class="navbar navbar-default navbar-static" role="navigation">
-                    <div class="container-fluid">
-                        <div class="navbar-header">
-                            <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target=".bs-example-js-navbar-scrollspy">
-                                <span class="sr-only">Toggle navigation</span>
-                                <span class="icon-bar"></span>
-                                <span class="icon-bar"></span>
-                                <span class="icon-bar"></span>
-                            </button>
-                            <a class="navbar-brand" href="#">Project Name</a>
-                        </div>
-                        <div class="collapse navbar-collapse bs-example-js-navbar-scrollspy">
-                            <ul class="nav navbar-nav">
-                                <li><a href="#fat">@fat</a></li>
-                                <li><a href="#mdo">@mdo</a></li>
-                                <li class="dropdown">
-                                    <a href="#" id="navbarDrop1" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
-                                    <ul class="dropdown-menu" role="menu" aria-labelledby="navbarDrop1">
-                                        <li><a href="#one" tabindex="-1">one</a></li>
-                                        <li><a href="#two" tabindex="-1">two</a></li>
-                                        <li class="divider"></li>
-                                        <li><a href="#three" tabindex="-1">three</a></li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </nav>
-
-                <div data-spy="scroll" data-target="#navbar-example2" data-offset="0" class="scrollspy-example grox">
-                    <h4 id="fat">@fat</h4>
-                    <p>Ad leggings keytar, brunch id art party dolor labore. Pitchfork yr enim lo-fi before they sold out qui. Tumblr farm-to-table bicycle rights whatever. Anim keffiyeh carles cardigan. Velit seitan mcsweeney's photo booth 3 wolf moon irure. Cosby sweater lomo jean shorts, williamsburg hoodie minim qui you probably haven't heard of them et cardigan trust fund culpa biodiesel wes anderson aesthetic. Nihil tattooed accusamus, cred irony biodiesel keffiyeh artisan ullamco consequat.</p>
-                    <h4 id="mdo">@mdo</h4>
-                    <p>Veniam marfa mustache skateboard, adipisicing fugiat velit pitchfork beard. Freegan beard aliqua cupidatat mcsweeney's vero. Cupidatat four loko nisi, ea helvetica nulla carles. Tattooed cosby sweater food truck, mcsweeney's quis non freegan vinyl. Lo-fi wes anderson +1 sartorial. Carles non aesthetic exercitation quis gentrify. Brooklyn adipisicing craft beer vice keytar deserunt.</p>
-                    <h4 id="one">one</h4>
-                    <p>Occaecat commodo aliqua delectus. Fap craft beer deserunt skateboard ea. Lomo bicycle rights adipisicing banh mi, velit ea sunt next level locavore single-origin coffee in magna veniam. High life id vinyl, echo park consequat quis aliquip banh mi pitchfork. Vero VHS est adipisicing. Consectetur nisi DIY minim messenger bag. Cred ex in, sustainable delectus consectetur fanny pack iphone.</p>
-                    <h4 id="two">two</h4>
-                    <p>In incididunt echo park, officia deserunt mcsweeney's proident master cleanse thundercats sapiente veniam. Excepteur VHS elit, proident shoreditch +1 biodiesel laborum craft beer. Single-origin coffee wayfarers irure four loko, cupidatat terry richardson master cleanse. Assumenda you probably haven't heard of them art party fanny pack, tattooed nulla cardigan tempor ad. Proident wolf nesciunt sartorial keffiyeh eu banh mi sustainable. Elit wolf voluptate, lo-fi ea portland before they sold out four loko. Locavore enim nostrud mlkshk brooklyn nesciunt.</p>
-                    <h4 id="three">three</h4>
-                    <p>Ad leggings keytar, brunch id art party dolor labore. Pitchfork yr enim lo-fi before they sold out qui. Tumblr farm-to-table bicycle rights whatever. Anim keffiyeh carles cardigan. Velit seitan mcsweeney's photo booth 3 wolf moon irure. Cosby sweater lomo jean shorts, williamsburg hoodie minim qui you probably haven't heard of them et cardigan trust fund culpa biodiesel wes anderson aesthetic. Nihil tattooed accusamus, cred irony biodiesel keffiyeh artisan ullamco consequat.</p>
-                    <p>Keytar twee blog, culpa messenger bag marfa whatever delectus food truck. Sapiente synth id assumenda. Locavore sed helvetica cliche irony, thundercats you probably haven't heard of them consequat hoodie gluten-free lo-fi fap aliquip. Labore elit placeat before they sold out, terry richardson proident brunch nesciunt quis cosby sweater pariatur keffiyeh ut helvetica artisan. Cardigan craft beer seitan readymade velit. VHS chambray laboris tempor veniam. Anim mollit minim commodo ullamco thundercats.
-                    </p>
-                </div>
-            </div><!-- /example -->
+        <div data-spy="scroll" data-target="#navbar-example2" data-offset="0" class="scrollspy-example grox">
+          <h4 id="fat">@fat</h4>
+          <p>Ad leggings keytar, brunch id art party dolor labore. Pitchfork yr enim lo-fi before they sold out qui.
+            Tumblr farm-to-table bicycle rights whatever. Anim keffiyeh carles cardigan.
+            Velit seitan mcsweeney's photo booth 3 wolf moon irure.
+            Cosby sweater lomo jean shorts, williamsburg hoodie minim qui you probably haven't heard of them et cardigan trust fund culpa biodiesel wes anderson aesthetic.
+            Nihil tattooed accusamus, cred irony biodiesel keffiyeh artisan ullamco consequat.</p>
+          <h4 id="mdo">@mdo</h4>
+          <p>Veniam marfa mustache skateboard, adipisicing fugiat velit pitchfork beard.
+            Freegan beard aliqua cupidatat mcsweeney's vero. Cupidatat four loko nisi, ea helvetica nulla carles.
+            Tattooed cosby sweater food truck, mcsweeney's quis non freegan vinyl. Lo-fi wes anderson +1 sartorial.
+            Carles non aesthetic exercitation quis gentrify. Brooklyn adipisicing craft beer vice keytar deserunt.</p>
+          <h4 id="one">one</h4>
+          <p>Occaecat commodo aliqua delectus. Fap craft beer deserunt skateboard ea.
+            Lomo bicycle rights adipisicing banh mi, velit ea sunt next level locavore single-origin coffee in magna veniam.
+            High life id vinyl, echo park consequat quis aliquip banh mi pitchfork. Vero VHS est adipisicing.
+            Consectetur nisi DIY minim messenger bag. Cred ex in, sustainable delectus consectetur fanny pack iphone.</p>
+          <h4 id="two">two</h4>
+          <p>In incididunt echo park, officia deserunt mcsweeney's proident master cleanse thundercats sapiente veniam.
+            Excepteur VHS elit, proident shoreditch +1 biodiesel laborum craft beer.
+            Single-origin coffee wayfarers irure four loko, cupidatat terry richardson master cleanse.
+            Assumenda you probably haven't heard of them art party fanny pack, tattooed nulla cardigan tempor ad.
+            Proident wolf nesciunt sartorial keffiyeh eu banh mi sustainable.
+            Elit wolf voluptate, lo-fi ea portland before they sold out four loko. Locavore enim nostrud mlkshk brooklyn nesciunt.</p>
+          <h4 id="three">three</h4>
+          <p>Ad leggings keytar, brunch id art party dolor labore. Pitchfork yr enim lo-fi before they sold out qui.
+            Tumblr farm-to-table bicycle rights whatever. Anim keffiyeh carles cardigan.
+            Velit seitan mcsweeney's photo booth 3 wolf moon irure.
+            Cosby sweater lomo jean shorts, williamsburg hoodie minim qui you probably haven't heard of them et cardigan trust fund culpa biodiesel wes anderson aesthetic.
+            Nihil tattooed accusamus, cred irony biodiesel keffiyeh artisan ullamco consequat.</p>
+          <p>Keytar twee blog, culpa messenger bag marfa whatever delectus food truck. Sapiente synth id assumenda.
+            Locavore sed helvetica cliche irony, thundercats you probably haven't heard of them consequat hoodie gluten-free lo-fi fap aliquip.
+            Labore elit placeat before they sold out, terry richardson proident brunch nesciunt quis cosby sweater pariatur keffiyeh ut helvetica artisan.
+            Cardigan craft beer seitan readymade velit. VHS chambray laboris tempor veniam. Anim mollit minim commodo ullamco thundercats.
+          </p>
         </div>
+      </div><!-- /example -->
+    </div>
 
-    </body>
+  </body>
 </html>
