add promise testing

--- a/app/index.html
+++ b/app/index.html
@@ -34,6 +34,8 @@
         <li><a href="tests/can/">can</a></li>
         <li><a href="tests/img/">img</a></li>
         <li><a href="tests/stack/">stack</a></li>
+        <li>x</li>
+        <li><a href="tests/prom/">prom</a></li>
       </ul>
 
     </div>
