add trigger buttons

--- a/app/tests/prom/index.html
+++ b/app/tests/prom/index.html
@@ -13,5 +13,14 @@ and open the template in the editor.
   </head>
   <body>
     <div>TODO write content</div>
+    <button onclick="fn()">all</button>
+    <button onclick="relay(fn1)">fn1()</button>
+    <button onclick="relay(fn2)">fn2()</button>
+    <button onclick="relay(fn3)">fn3()</button>
+    <button onclick="relay(fn4)">fn4()</button>
+    <button onclick="relay(fn5)">fn5()</button>
+    <button onclick="relay(fn6)">fn6()</button>
+    <button onclick="relay(fn7)">fn7()</button>
+    <button onclick="relay(fn8)">fn8()</button>
   </body>
 </html>
