add final permutation

--- a/app/tests/prom/index.html
+++ b/app/tests/prom/index.html
@@ -22,5 +22,6 @@ and open the template in the editor.
     <button onclick="relay(fn6)">fn6()</button>
     <button onclick="relay(fn7)">fn7()</button>
     <button onclick="relay(fn8)">fn8()</button>
+    <button onclick="relay(fn9)">fn9()</button>
   </body>
 </html>
