ensure proper parsing

--- a/app/index.html
+++ b/app/index.html
@@ -36,6 +36,7 @@
         <li><a href="tests/stack/">stack</a></li>
         <li>x</li>
         <li><a href="tests/prom/">prom</a></li>
+        <li><a href="tests/json/">json</a></li>
       </ul>
 
     </div>
